--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.12.10",
     "browserify": "^13.0.1",
     "browserify-shim": "^3.8.12",
@@ -20,6 +22,18 @@
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
   },
   "scripts": {
     "gulp": "gulp"
