--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 npm-debug.log
 node_modules/
 assets/js
+assets/css
+assets/packages
 style.css
-style.min.css
-editor-style.css
-editor-style.min.css
