--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "underscore": "global:_",
     "backbone": "global:Backbone"
   },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "html5shiv": "^3.7.3"
+  },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-preset-es2015": "^6.22.0",
@@ -21,6 +26,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1",
+    "rimraf": "^2.5.4",
     "vinyl-source-stream": "^1.1.0"
   },
   "browserify": {
