--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-uglify": "^2.0.1",
     "rimraf": "^2.5.4",
     "vinyl-source-stream": "^1.1.0"
