--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "require": {
     "php": ">=5.6",
-    "inc2734/wp-customizer-framework": ">=3.0.2"
+    "inc2734/wp-customizer-framework": "^3.0"
   },
   "config": {
     "process-timeout": 0,
