--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "inc2734/wp-customizer-framework": "^3.0"
+    "inc2734/wp-customizer-framework": "^3.0",
+    "inc2734/wp-github-theme-updater": "^0.2.7"
   },
   "config": {
     "process-timeout": 0,
