--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ cache:
   - "$HOME/.composer/cache"
 install:
 - nvm install 6
-- npm install -g yarn
-- yarn install
+- npm install
 - npm rebuild node-sass
 - composer install
 before_install:
@@ -43,8 +42,10 @@ after_success:
 before_deploy:
 - git clone -b master --quiet git@github.com:myouan/myouan.git release
 - cd release
-- yarn install
-- yarn run gulp zip
+- npm install
+- composer install --no-dev
+- npm run gulp build
+- npm run gulp zip
 - ls -la myouan.zip
 - export RELEASE_FILE=$(ls myouan.zip)
 deploy:
